main/default/objects/TeleMeet_Participant__c/TeleMeet_Participant__c.object-meta.xml
<CustomObject>
    <label>Connect Participant</label>
    <nameField>
        <displayFormat>CCP-{0000000}</displayFormat>
        <label>Connect Participant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connect Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>