main/default/objects/TeleMeet_Participant__c/fields/TeleMeet__c.field-meta.xml
<CustomField>
    <fullName>TeleMeet__c</fullName>
    <label>TeleMeet</label>
    <referenceTo>TeleMeet__c</referenceTo>
    <relationshipName>TeleMeet_Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>